# Propagator-AI-VLEO-Env

./: .gitignore  .gitmodules  FirstStart.md  README.md  README_RL_SAT.md  RL_Tutorial.md  Tutorial.md  requirements.txt  train_shuttlecock.py
+smu/: cpm.m  rotateAroundOrigin.m  rotateAroundPoint.m
+smu/unitQuat/att/: transformVector.m
cpp/: CMakeLists.txt
cpp/configs/: shuttlecock_250km.json
cpp/include/: aero_adapter.h  aerodynamics.h  atmo_nrlmsis.h  body_importer.h  c_api.h  dynamics.h  env.h  env_config.h  frames.h  gravity.h  integrators.h  obj_loader.h  rotate_body.h  shadowing.h  show_bodies.h  shuttlecock_aero.h  smu_stubs.h  vleo_aerodynamics.h
cpp/src/: aero_adapter.cpp  aerodynamics.cpp  atmo_nrlmsis.cpp  body_importer.cpp  c_api.cpp  dynamics.cpp  env.cpp  env_config.cpp  frames.cpp  gravity.cpp  integrators.cpp  obj_loader.cpp  rotate_body.cpp  shadowing.cpp  show_bodies.cpp  shuttlecock_aero.cpp  smu_stubs.cpp  vleo_aerodynamics.cpp
cpp/tests/: main.cpp
cpp/tools/: assemble_shuttlecock.cpp  compare_shuttlecock.cpp  env_demo.cpp  propagate_demo.cpp  sweep_shuttlecock.cpp
python/: pyproject.toml  requirements.txt  shuttlecock_env.py
runs/: shuttle_debug.csv
runs/PPO_1/: events.out.tfevents.1756816425.jovan-work.30438.0  events.out.tfevents.1756978513.jovan-SER.11343.0
runs/PPO_2/: events.out.tfevents.1756816848.jovan-work.31007.0
scripts/: convert_nrlmsis_to_submodule.sh  plot_envelope.py  plot_shuttlecock.py  quickstart.sh  run_angles_10orbits_1step.sh  run_attitude_only.sh  run_coupled.sh  run_orbit_only.sh  run_quick_demo.sh  train_100_episodes.sh
src/: __init__.py
src/rl_sat/configs/: angles_only.yaml  angles_thrust.yaml  angles_thrust_10orbits_1step.yaml  attitude_only.yaml  coupled.yaml  default.yaml  orbit_only.yaml  shuttlecock_angles_thrust_polar.yaml
src/rl_sat/envs/: __init__.py  safety_filter.py  satellite_env.py
src/rl_sat/sim/: frames.py  interfaces.py  normalization.py  rewards.py  shuttlecock_adapter.py  termination.py
src/training/: callbacks.py  eval_policy.py  train_ppo.py  train_sac.py
tests/: conftest.py  test_env_shapes.py  test_rewards.py  test_rewards_terms.py  test_safety_filter.py  test_termination.py
